--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
         <div class="app-content">
             <div class="notify"></div>
             <form action="">
-                <input type="text" placeholder="enter next to-do"><br>
+                <input type="text" name="todo" placeholder="enter next to-do"><br>
                 <button class="btn">submit</button>
             </form>
-            <!-- <div class="list">
-                <div class="list-item">
-                    <li></li>
-                    <p>x</p>
-                </div>
-            </div> -->
+           
             <ul class="collection"></ul>
             <br><br>
             <hr>
